# Breakpad-demo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/shenyong/breakpaddemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/shenyong/breakpaddemo/: MainActivity.kt
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  crash.cpp
app/src/main/jni/breakpad/: Android.mk  CMakeLists.txt  breakpad_lib.cc
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/shenyong/breakpaddemo/: ExampleUnitTest.kt
